@@ -1,3 +1,9 @@
+2001-07-12  Jeff Johnston  <jjohnstn@redhat.com>
+
+        * opc-itab.scm (@arch@_cgen_init_opcode_table): Unconditionally
+        call @arch@_cgen_build_insn_regex now that regex support is in
+        libiberty.
+
 2001-07-12  Frank Ch. Eigler  <fche@redhat.com>
 
 	* insn.scm (filter-harmlessly-ambiguous-insns): Fix msg typo.
